--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
          processIsolation="false"
          stopOnFailure="false">
     <testsuites>
-        <testsuite name="pbarsallo Test Suite">
+        <testsuite name="Bitbucket API 2.0 PHP Client Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
@@ -20,8 +20,9 @@
         </whitelist>
     </filter>
     <logging>
+        <log type="tap" target="build/report.tap"/>
         <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage"/>
+        <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
         <log type="coverage-text" target="build/coverage.txt"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
